# open-analyst

./: .dockerignore  .env.docker  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.web  LICENSE  README.md  docker-compose.prod.local-db.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  text.xlsx  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
app/: root.tsx  routes.ts
app/__tests__/: headless-api.test.ts  tavily.test.ts
app/components/: AddSourceModal.tsx  AlertDialog.tsx  ArtifactsWorkspaceView.tsx  AssistantWorkspaceView.tsx  CanvasPanel.tsx  CanvasWorkspaceView.tsx  ChatView.tsx  ConfigModal.tsx  ContextPanel.tsx  DocumentPreview.tsx  EvidenceWorkspaceView.tsx  FileViewerPanel.tsx  InterruptCard.tsx  KnowledgePanel.tsx  KnowledgeWorkspace.tsx  LanguageSwitcher.tsx  MessageCard.tsx  PermissionDialog.tsx  ProjectContextPanel.tsx  ProjectLeftPanel.tsx  ProjectRightDock.tsx  ProjectSettingsDialog.tsx  ProjectWorkspace.tsx  QuickStartDashboard.tsx  RunWorkspaceView.tsx  SandboxSyncToast.tsx  SettingsPanel.tsx  Sidebar.tsx  SubagentPanel.tsx  ThemeScript.tsx  ThreadContextPanel.tsx  Titlebar.tsx  TopNav.tsx  TracePanel.tsx  WelcomeView.tsx  WorkspaceSettingsPanel.tsx  index.ts
app/hooks/: useAnalystStream.ts  useChatStream.ts  useIPC.ts
app/lib/: analyst-mcp-sync.server.ts  artifact-steps.ts  artifacts.server.ts  browser-config.ts  chat-stream.ts  chat.server.ts  config.server.ts  credentials.server.ts  env.server.ts  file-link.ts  file-utils.ts  filesystem.server.ts  format.ts  headless-api.ts  helpers.server.ts  internal-api.server.ts  knowledge-embedding.server.ts  knowledge-index.server.ts  langgraph-stream.ts  litellm.server.ts  logs.server.ts  mcp-client.server.ts  mcp.server.ts  model-capabilities.ts  project-access.server.ts  project-runtime.server.ts  project-storage.server.ts  project-store.server.ts  request-utils.ts  runtime-client.server.ts  runtime-context.server.ts  runtime-proxy.server.ts  runtime-skills.server.ts  skill-manifest.server.ts  skills.server.ts  source-ingest.server.ts  store.ts  task-collection.server.ts  tavily.server.ts  theme.ts  (+6 more)
app/routes/: _app._index.loader.server.ts  _app._index.tsx  _app.tsx  (+91 more)
docs/: AGENTIC_AI_2026.md  AGENT_ARCHITECTURE.md  ARCHITECTURE.md  COLLABORATION.md  DEPLOYMENT.md  MIGRATION_PLAN.md  PERSISTENCE.md  REPOSITORY_MAP.md  VALIDATION.md  WORKSPACE_SETTINGS.md
drizzle/: 0000_salty_vengeance.sql  0001_project_storage.sql  0002_documents_embedding_json.sql  0003_v3_clean_slate.sql  0005_source_ingest_and_canvas_publish.sql
scripts/: docker-prod.sh  docker-web-entrypoint.sh  headless-server.js  python-service.sh  reindex-knowledge.mjs  reset-chat-state.mjs
services/analyst-mcp/: .gitignore  Dockerfile  README.md  graph_usage.md  operations.md  pyproject.toml
services/analyst-mcp/data/articles/arxiv/2506.11687v2/: 2506.11687v2.txt
services/analyst-mcp/data/articles/arxiv/2512.18163v2/: 2512.18163v2.txt
services/analyst-mcp/data/articles/arxiv/2603.09739v2/: 2603.09739v2.txt
services/analyst-mcp/data/articles/arxiv/2603.11025v1/: 2603.11025v1.txt
services/analyst-mcp/data/articles/arxiv/2603.11030v1/: 2603.11030v1.txt
services/analyst-mcp/data/articles/arxiv/2603.11032v1/: 2603.11032v1.txt
services/analyst-mcp/data/articles/arxiv/2603.11033v1/: 2603.11033v1.txt
services/analyst-mcp/data/articles/arxiv/2603.11037v1/: 2603.11037v1.txt
services/analyst-mcp/data/articles/arxiv/2603.11044v1/: 2603.11044v1.txt
services/analyst-mcp/data/articles/arxiv/2603.11046v1/: 2603.11046v1.txt
services/analyst-mcp/data/articles/arxiv/2603.11048v1/: 2603.11048v1.txt
services/analyst-mcp/data/raw/: bulk_checkpoints.json
services/analyst-mcp/src/analyst_mcp/: __init__.py  api.py  bulk_ingest.py  cli.py  collection_store.py  config.py  db.py  errors.py  mcp_server.py  models.py  paper_store.py  providers.py  request_context.py  services.py  vector_index.py
services/analyst-mcp/tests/: conftest.py  test_api.py  test_mcp_tools.py  test_providers.py  test_services.py
services/langgraph-runtime/: Dockerfile  langgraph.json  pyproject.toml
services/langgraph-runtime/src/: config.py  graph.py  main.py  models.py  pg_checkpointer.py  pg_store.py  retrieval.py  runtime_api.py  runtime_context.py  runtime_db.py  runtime_engine.py  shared_storage_backend.py  telemetry.py  web_tools.py  webapp.py
services/langgraph-runtime/src/open_analyst_langgraph_runtime.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/langgraph-runtime/tests/: conftest.py  test_graph.py  test_retrieval.py  test_web_tools.py  test_webapp.py
services/strands-agent/: .bedrock_agentcore.yaml  .env.example  Dockerfile  pyproject.toml
services/strands-agent/src/: agent_factory.py  config.py  main.py  postgres_session_manager.py  research_worker.py
services/strands-agent/src/open_analyst_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/strands-agent/src/tools/: __init__.py  command_tools.py  file_tools.py  generate_tools.py  project_tools.py  research_tools.py  web_tools.py
services/strands-agent/src/util/: __init__.py  auto_capture.py  capture.py  sandbox.py
services/strands-agent/tests/: conftest.py  test_agent_factory.py  test_auto_capture.py  test_command_tools.py  test_file_tools.py  test_generate_tools.py  test_postgres_session_manager.py  test_project_tools.py  test_research_tools.py  test_research_worker.py  test_web_tools.py
tests/: artifact-icon.test.ts  artifact-path.test.ts  artifact-steps.test.ts  file-link.test.ts  prose-chat-list-style.test.ts  session-update-event.test.ts  settings-panel-sidebar.test.ts  tool-output-path.test.ts
(+143 files in other folders)
