[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analyst-mcp"
version = "0.1.0"
description = "Python MCP server for academic and intelligence analyst research workflows"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "aioboto3>=15.5.0",
  "fastapi>=0.135.1",
  "httpx>=0.28.1",
  "litellm>=1.82.0",
  "mcp[cli]>=1.26.0",
  "neo4j>=6.1.0",
  "pgvector>=0.4.2",
  "psycopg[binary]>=3.3.3",
  "psycopg-pool>=3.2.4",
  "pydantic-settings>=2.13.1",
  "pypdf>=6.9.1",
  "python-multipart>=0.0.22",
  "pyyaml>=6.0.2",
  "redis>=7.3.0",
  "sqlalchemy>=2.0.48",
  "tenacity>=8.2.3",
  "typer>=0.24.1",
  "uvicorn[standard]>=0.41.0"
]

[project.optional-dependencies]
dev = [
  "respx>=0.22.0"
]

[project.scripts]
analyst-mcp = "analyst_mcp.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
