[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-analyst-langgraph-runtime"
version = "0.1.0"
description = "LangGraph runtime for Open Analyst v3"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.4.11",
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.0",
    "langgraph>=0.6.0",
    "langgraph-checkpoint-postgres>=3.0.1",
    "langsmith>=0.4.0",
    "opentelemetry-api>=1.39.0",
    "opentelemetry-sdk>=1.39.0",
    "opentelemetry-exporter-otlp>=1.39.0",
    "psycopg[binary]>=3.2.9",
    "psycopg-pool>=3.2.4",
    "pydantic-settings>=2.10.0",
    "sse-starlette>=3.0.0",
    "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0.0",
    "langgraph-cli[inmem]>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
